--- a/scancode/src/main/res/values/strings.xml
+++ b/scancode/src/main/res/values/strings.xml
@@ -2,11 +2,14 @@
     <string name="app_name">ScanCode</string>
 
     <string name="i_know">我知道了</string>
-    <string name="permission">抱歉,你的%1$s权限没有打开,无法正常服务
-        \n请点击”设置”->在应用程序中找到”popon”->权限管理->%2$s->”允许”即可 </string>
+    <string name="permission">抱歉,你的相机权限没有打开,无法正常服务
+        \n请点击”设置”->当前应用->权限管理->相机->”允许”即可 </string>
     <string name="camera">摄像头(相机)</string>
     <string name="str_close_flash">轻触关闭</string>
     <string name="str_open_flash">轻触打开</string>
     <string name="str_scan">扫一扫</string>
     <string name="str_decode_fail">图片解析失败，换个图片试试</string>
+    <string name="please_open_flash">环境过暗，请打开闪光灯</string>
+    <string name="permissions_check_warn">警告！</string>
+    <string name="permissions_check_ok">确定</string>
 </resources>
